--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </header>
     <main>
         <section>
-            <h2>Welcome to the UM Grad Success Navigator</h2>
-            <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
+            <h2>Welcome to the UM Undergrad Success Navigator</h2>
+            <p> Your Comprehensive Guide to Resources for Undergraduate School Success</p>
             <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             <ol>
                 <li>Academic Resources</li>
@@ -82,7 +82,7 @@
         
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
-            <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
+            <p>Undergraduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
             <article>
 
             </article>
@@ -98,7 +98,7 @@
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>UMSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
         </footer>
 </body>
 </html>
