--- a/page_1.html
+++ b/page_1.html
@@ -31,10 +31,10 @@
             <p>Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies.</p>
         </div>
 
-        <div
+        <div>
             <h1>University Library System</h1>
             <p>UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework.</p>
-        ></div>
+        </div>
         
         <div>
             <h1>Tutoring</h1>
