--- a/page_1.html
+++ b/page_1.html
@@ -27,7 +27,7 @@
         </div>
         
         <div>
-            <h2>Academic Advising Team</h2>
+            <h2><a href= https://sites.google.com/umich.edu/bsiacademicadvising/home">Academic Advising Team</a></h2>
             <p>Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies.</p>
         </div>
 
