--- a/page_1.html
+++ b/page_1.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                <li><a href = "page_2.html">Page 2</a></li>
+                li><a href = "page_3.html">Page 3</a></li>
             </ul>
         </nav>
         <h1>Academic Support at UMSI</h1>
@@ -32,17 +32,17 @@
         </div>
 
         <div>
-            <h2>University Library System</h2>
+            <h2><a href="https://www.lib.umich.edu/visit-and-study/study-spaces">University Library System</a></h2>
             <p>UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework.</p>
         </div>
         
         <div>
-            <h2>Tutoring</h2>
+            <h2><a href="https://sites.google.com/umich.edu/umsitutoring/home">Tutoring</a></h2>
             <p>Our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills.</p>
         </div>
         
         <div>
-            <h2>DEI</h2>
+            <h2>Diversity, Equity, and Inclusion Resources</h2>
             <p>CEW+, first gen placeholders</p>
         </div>
     </main>
