--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Page 1</a></li>
                 <li><a href = "page_2.html">Page 2</a></li>
-                <li>Page 3</li>
+                li><a href = "page_3.html">Page 3</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
