--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Academic Support</a></li>
                 <li><a href = "page_2.html">Extracurriculars & Volunteering</a></li>
-                li><a href = "page_3.html">Wellness & Crisis Support</a></li>
+                <li><a href = "page_3.html">Wellness & Crisis Support</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
