--- a/page_2.html
+++ b/page_2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic Support at UMSI</title>
+    <title>Extracurriculars & Volunteering</title>
 </head>
 <body>
 
@@ -13,12 +13,12 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li><a href = "page_2.html">Page 2</a></li>
-                li><a href = "page_3.html">Page 3</a></li>
+                <li><a href = "page_1.html">Academic Support</a></li>
+                <li><a href = "page_2.html">Extracurriculars & Volunteering</a></li>
+                <li><a href = "page_3.html">Wellness & Crisis Support</a></li>
             </ul>
         </nav>
-        <h1>Academic Support at UMSI</h1>
+        <h1>Extracurriculars & Volunteering</h1>
 
     </header>
     <main>
