--- a/page_3.html
+++ b/page_3.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li><a href = "page_2.html">Page 2</a></li>
-                <li><a href = "page_3.html">Page 3</a></li>
+                <li><a href = "page_1.html">Academic Support</a></li>
+                <li><a href = "page_2.html">Extracurriculars & Volunteering</a></li>
+                <li><a href = "page_3.html">Wellness & Crisis Support</a></li>
             </ul>
         </nav>
         <h1>Finding Resources in Times of Crisis</h1>
