--- a/page_1.html
+++ b/page_1.html
@@ -43,7 +43,10 @@
         
         <div>
             <h2>Diversity, Equity, and Inclusion Resources</h2>
-            <p>CEW+, first gen placeholders</p>
+            <p>We value ensuring our students are able to feel included in all spaces at UMSI. 
+            Below are a few groups that help encourage DEI on campus.</p>
+            <h3><a href= "https://www.cew.umich.edu/CEW+">CEW+</a></h3>
+            <h3><a href= "https://firstgen.umich.edu/">First Gen</a></h3>
         </div>
     </main>
     <footer>
