--- a/page_1.html
+++ b/page_1.html
@@ -45,8 +45,16 @@
             <h2>Diversity, Equity, and Inclusion Resources</h2>
             <p>We value ensuring our students are able to feel included in all spaces at UMSI. 
             Below are a few groups that help encourage DEI on campus.</p>
-            <h3><a href= "https://www.cew.umich.edu/CEW+">CEW+</a></h3>
+            
+            <h3><a href= "https://www.cew.umich.edu/CEW+">Center for The Education of Women+</a></h3>
+            <p>The Center for The Education of Women+ (CEW+) helps students navigate circumstantial barriers
+                by providing academic, financial, and professional support to help them reach your 
+                personal potential. Through career and education counseling, funding, workshops, 
+                events, and a diverse, welcoming community, CEW+ helps empower women. </p>
+            
             <h3><a href= "https://firstgen.umich.edu/">First Gen</a></h3>
+            <p>First Generation at U-M provides a community to connect with first-generation students
+                and those who will support and encourage you throughout your journey.</p>
         </div>
     </main>
     <footer>
