--- a/page_1.html
+++ b/page_1.html
@@ -29,6 +29,7 @@
         <div>
             <h2><a href="https://sites.google.com/umich.edu/bsiacademicadvising/home">Academic Advising Team</a></h2>
             <p>Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies.</p>
+            <img src="images/AcademicAdvisingTeam.jpg" alt="Male student pointing to computer next to female student">
         </div>
 
         <div>
