--- a/page_1.html
+++ b/page_1.html
@@ -35,11 +35,13 @@
         <div>
             <h2><a href="https://www.lib.umich.edu/visit-and-study/study-spaces">University Library System</a></h2>
             <p>UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework.</p>
+            <img src="images/AcademicAdvisingTeam.jpg" alt="Male student pointing to computer next to female student">
         </div>
         
         <div>
             <h2><a href="https://sites.google.com/umich.edu/umsitutoring/home">Tutoring</a></h2>
             <p>Our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills.</p>
+            <img src="images/LibraryServices.jpg" alt="Students sitting in front of computers in a library">
         </div>
         
         <div>
