--- a/page_1.html
+++ b/page_1.html
@@ -35,7 +35,7 @@
         <div>
             <h2><a href="https://www.lib.umich.edu/visit-and-study/study-spaces">University Library System</a></h2>
             <p>UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework.</p>
-            <img src="images/AcademicAdvisingTeam.jpg" alt="Male student pointing to computer next to female student">
+            <img src="images/LibraryServices.jpg" alt="Students sitting in front of computers in a library">
         </div>
         
         <div>
