--- a/page_1.html
+++ b/page_1.html
@@ -41,7 +41,7 @@
         <div>
             <h2><a href="https://sites.google.com/umich.edu/umsitutoring/home">Tutoring</a></h2>
             <p>Our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills.</p>
-            <img src="images/LibraryServices.jpg" alt="Students sitting in front of computers in a library">
+            <img src="images/TutoringService.jpg" alt="A woman and a man putting up post it notes">
         </div>
         
         <div>
