--- a/extracurriculars_and_volunteering.html
+++ b/extracurriculars_and_volunteering.html
@@ -57,7 +57,7 @@
             105 S State St.<br>
             Ann Arbor, MI 48109-1285</p>
     </footer>
-    
+    <script src="js/java.js"></script>
 </body>
 
 </html>
