--- a/extracurriculars_and_volunteering.html
+++ b/extracurriculars_and_volunteering.html
@@ -32,12 +32,12 @@
         </section>
         <section tabindex= "0" class="extracurriculars" id="life-outside-classroom">
             <h2>Extracurriculars</h2>
-            <img src="images/Extracurriculars.jpg" alt="Three girls smiling at a Michigan football game">
-            <ul>
-                <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
-                <li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
-                <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
-            </ul>
+            <article id="extracurriculars-text">
+                <img id="extracurriculars-img" src="images/Extracurriculars.jpg" alt="Three girls smiling at a Michigan football game">
+                <p id="student-orgs"><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</p>
+                <p id="arts"></li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</p>
+                <p id="housing"> <strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</p>
+            </article>
         </section>
 
         <section tabindex= "0" class="volunteering">
