--- a/index.html
+++ b/index.html
@@ -46,22 +46,26 @@
         </section>
 
         <section tabindex= "0" class="physical-health"> 
-            <h2>Physical Health</h2>
-            <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
-            <article>
-                <h3>University Health Service (UHS)</h3>
-                <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
-                <div class="image-container">
+            <h2 id="health-heading">Physical Health</h2>
+            <p id="health-descrip">Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
+            <article id = "uhs-container">
+                <div id= "uhs-text">
+                    <h3>University Health Service (UHS)</h3>
+                    <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>    
+                </div>
+                <div id= "uhs-img" class="image-container">
                     <img src="images/UHS.jpg" alt="University Health Services building">
                     <div class="overlay"></div>
                     <div class="text-overlay">Located at 207 Fletcher St, Ann Arbor</div>
                 </div>
             </article>
 
-            <article>
-                <h3>Recreational Sports</h3>
-                <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
-                <div class="image-container">
+            <article id = "rec-container">
+                <div id= "rec-text">
+                    <h3>Recreational Sports</h3>
+                    <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
+                </div>
+                <div id = "recreational-img" class="image-container">
                     <img src="images/RecreationalSports.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
                     <div class="overlay"></div>
                     <div class="text-overlay">Intramural Building: Located at 606 E Hoover Ave, Ann Arbor</div>
