--- a/wellness_and_crisis.html
+++ b/wellness_and_crisis.html
@@ -36,24 +36,27 @@
             <h2><a href="https://caps.umich.edu/">Counseling and Psychology Services</a></h2>
             <p>Michigan's Counseling and Psychology Services (CAPS) is committed to creating an environment based on our values of multicultural,
             multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health. </p>
-            <div class="image-container">
+        <article id="CAPS-container">
+            <div id = "CAPS-img" class="image-container">
                 <img src="images/CAPS.jpg" alt="Logo of Michigan's Counseling and Psychology Services and two handprints">
                 <div class="overlay"></div>
                 <div class="text-overlay">Located at Suite 4079, 530 South State Street, Ann Arbor</div>
             </div>
-        <article>
-            <h3>Wellness Coaching:</h3>
-            <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
-        </article>
+        
+            <div>
+                <h3>Wellness Coaching:</h3>
+                <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
+            </div>
+            
+            <div>
+                <h3>Mindfulness Resources:</h3>
+                <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
+            </div>
 
-        <article>
-            <h3>Mindfulness Resources:</h3>
-            <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-        </article>
-
-        <article>
-            <h3>Support Groups:</h3>
-            <p> Join peer support groups for shared experiences and collective coping strategies.</p>
+            <div>
+                <h3>Support Groups:</h3>
+                <p> Join peer support groups for shared experiences and collective coping strategies.</p>
+            </div>
         </article>
         </section>
 
