--- a/academic_support.html
+++ b/academic_support.html
@@ -10,9 +10,8 @@
     <title>Academic Support</title>
 </head>
 <body>
-
     <header>
-            <a class = "skip" href = "main">Skip to Main Content</a>
+    <a class = "skip" href = "#main">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
