--- a/extracurriculars_and_volunteering.html
+++ b/extracurriculars_and_volunteering.html
@@ -11,9 +11,8 @@
     <title>Extracurriculars & Volunteering</title>
 </head>
 <body>
-
     <header>
-            <a class = "skip" a href = "main">Skip to Main Content</a>
+    <a class = "skip" href = "#main">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
