--- a/404.html
+++ b/404.html
@@ -10,9 +10,9 @@
     <title> 404 Error Page</title>
 </head>
 <body>
-    <div>
+    <div id ="error">
         <h1>Oops!</h1>
         <p> Page not found! Navigate back to the homepage using the following:</p>
-        <li><a href = "index.html" class="active">Home</a></li>
+        <a href = "index.html" class="active">Home</a>
     </div>
 </body>
