--- a/404.html
+++ b/404.html
@@ -10,9 +10,11 @@
     <title> 404 Error Page</title>
 </head>
 <body>
-    <div id ="error">
-        <h1>Oops!</h1>
-        <p> Page not found! Navigate back to the homepage using the following:</p>
-        <a href = "index.html" class="active">Home</a>
-    </div>
+    <main>
+        <div id ="error">
+            <h1>Oops!</h1>
+            <p> Page not found! Navigate back to the homepage using the following:</p>
+            <a href = "index.html" class="active">Home</a>
+        </div>
+    </main>
 </body>
